manifests/apps/app-finance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-finance
  namespace: app-finance
spec:
  selector:
    app: app-finance
  ports:
    - port: 3000
      targetPort: 3000
