manifests/apps/app-finance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-finance
  namespace: app-finance
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - finance.growcodelabs.com
      secretName: app-finance-tls
  rules:
    - host: finance.growcodelabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-finance
                port:
                  number: 3000
